--- a/P3-UserService/src/main/resources/application.properties
+++ b/P3-UserService/src/main/resources/application.properties
@@ -1,1 +1,63 @@
+# ===============================
+# = VIEW RESOLVER
+# ===============================
+#spring.mvc.view.prefix: /WEB-INF/views/
+#spring.mvc.view.suffix: .jsp
 
+#  Si hubieramos usado .htm y ademas un motor de pantillas (Ej Thymeleaf) en vez de JSP
+#  deberiamos haberlo colocado en /resources/templates.
+#  No habria que indicar nada especial como hemos hecho con .JSP
+
+spring.mvc.static-path-pattern=/resources/**
+
+# ===============================
+# = ACTUATOR
+# ===============================
+#Permite conocer los endpoints
+logging.level.org.springframework.web.servlet.mvc.method.annotation=TRACE
+
+
+# ===============================
+# = DATA SOURCE
+# ===============================
+spring.datasource.url= jdbc:mysql://localhost:3306/security?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username= root
+spring.datasource.password= root
+
+# ===============================
+# = JPA / HIBERNATE
+# ===============================
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.id.new_generator_mappings = false
+spring.jpa.properties.hibernate.format_sql = true
+
+
+# ===============================
+# = Tomcat configurations
+# https://www.concretepage.com/spring-boot/spring-boot-tomcat-connection-pool
+# ===============================
+spring.datasource.tomcat.max-wait= 20000
+spring.datasource.tomcat.max-active= 50
+spring.datasource.tomcat.max-idle= 20
+spring.datasource.tomcat.min-idle= 15
+
+# ===============================
+# = Logging configurations (incluido por defecto con Spring Boot)
+#   https://www.concretepage.com/spring-boot/spring-boot-logging-example
+#   http://www.springboottutorial.com/logging-with-spring-boot-logback-slf4j-and-log4j
+#   ERROR, WARN and INFO log levels are displayed by default. We can enable DEBUG and TRACE log levels
+# ===============================
+#   Se pueden colocar Level distintos segun los frameworks
+#   El raiz es: logging.level.root
+logging.level.org.hibernate.SQL= DEBUG
+logging.level.org.springframework.web= INFO
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder= DEBUG 
+
+# se puede configurar la salida
+#    logging.file=\path_to\logfile.log
+logging.pattern.console= %d{yyyy-MMM-dd HH:mm:ss.SSS} %-5level [%thread] %logger{15} - %msg%n
+
+# Se emplean en SecurityConfiguration
+#los nombres son propios. Spring no los reconoce
+spring.queries.users-query=select  username, password, enabled from user where username=? 
+spring.queries.roles-query=select u.username, r.role from user u inner join user_role ur on(u.id=ur.user_id) inner join role r on(ur.role_id=r.id) where u.username=?
