--- a/P3-EventService/src/main/resources/application.properties
+++ b/P3-EventService/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-
+spring.data.mongodb.uri=mongodb+srv://admin:admin@eventservice.rjyyv.mongodb.net/eventList?retryWrites=true&w=majority
+spring.data.mongodb.database=eventList
