--- a/P3-UserService/src/main/resources/application.properties
+++ b/P3-UserService/src/main/resources/application.properties
@@ -22,7 +22,7 @@ logging.level.org.springframework.web.servlet.mvc.method.annotation=TRACE
 # ===============================
 spring.datasource.url= jdbc:mysql://localhost:3306/security?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username= root
-spring.datasource.password= root
+spring.datasource.password= Root
 
 # ===============================
 # = JPA / HIBERNATE
