--- a/P3-UserService/src/main/resources/application.properties
+++ b/P3-UserService/src/main/resources/application.properties
@@ -61,3 +61,4 @@ logging.pattern.console= %d{yyyy-MMM-dd HH:mm:ss.SSS} %-5level [%thread] %logger
 #los nombres son propios. Spring no los reconoce
 spring.queries.users-query=select  username, password, enabled from user where username=? 
 spring.queries.roles-query=select u.username, r.role from user u inner join user_role ur on(u.id=ur.user_id) inner join role r on(ur.role_id=r.id) where u.username=?
+server.port = 7070
