--- a/P3-UserService/src/main/resources/application.properties
+++ b/P3-UserService/src/main/resources/application.properties
@@ -22,7 +22,7 @@ logging.level.org.springframework.web.servlet.mvc.method.annotation=TRACE
 # ===============================
 spring.datasource.url= jdbc:mysql://localhost:3306/security?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username= root
-spring.datasource.password= Root
+spring.datasource.password= root
 
 # ===============================
 # = JPA / HIBERNATE
@@ -61,3 +61,4 @@ logging.pattern.console= %d{yyyy-MMM-dd HH:mm:ss.SSS} %-5level [%thread] %logger
 #los nombres son propios. Spring no los reconoce
 spring.queries.users-query=select  username, password, enabled from user where username=? 
 spring.queries.roles-query=select u.username, r.role from user u inner join user_role ur on(u.id=ur.user_id) inner join role r on(ur.role_id=r.id) where u.username=?
+
