--- a/P3-EventService/src/main/resources/application.properties
+++ b/P3-EventService/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.data.mongodb.uri=mongodb+srv://admin:admin@eventservice.rjyyv.mongodb.net/eventList?retryWrites=true&w=majority
 spring.data.mongodb.database=eventList
 
+spring.data.mongo.repositories.enabled=true
 
-spring.cloud.config.enabled=false
-spring.main.allow-bean-definition-overriding=true
+logging.level.org.springframework.web.servlet.mvc.method.annotation=TRACE
