--- a/P3-LucaTicketMaster/src/main/resources/application.properties
+++ b/P3-LucaTicketMaster/src/main/resources/application.properties
@@ -1,1 +1,19 @@
+server.port=1111
+spring.application.name=eureka
 
+# Solo tiene sentido si arranco antes el servidor de configuraciones
+# spring.cloud.config.uri=http://localhost:2222
+# spring.config.import=optional:configserver:
+
+eureka.instance.hostname=localhost
+
+# No quiero que el servidor se registre como cliente
+eureka.client.registerWithEureka=false
+eureka.client.fetchRegistry=false
+# Si no indico nada por defecto sera localhost:8761 en este caso
+# Comentada para probar que no sea 8080
+# eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
+
+
+#Permite conocer los endpoints
+logging.level.org.springframework.web.servlet.mvc.method.annotation=TRACE
