--- a/P3-UserService/src/main/resources/application.properties
+++ b/P3-UserService/src/main/resources/application.properties
@@ -41,3 +41,13 @@ logging.pattern.console= %d{yyyy-MMM-dd HH:mm:ss.SSS} %-5level [%thread] %logger
 spring.queries.users-query=select  username, password, enabled from user where username=? 
 spring.queries.roles-query=select u.username, r.role from user u inner join user_role ur on(u.id=ur.user_id) inner join role r on(ur.role_id=r.id) where u.username=?
 
+# ===============================
+# = CONFIG SERVER
+# ===============================
+# Los datos del puerto se encuentran en la configuracion
+spring.application.name=userService
+
+#Datos para traer la configuracion
+spring.cloud.config.uri=http://localhost:2222
+spring.config.import=optional:configserver:
+
