properties y pom event service

--- a/P3-EventService2/src/main/resources/application.properties
+++ b/P3-EventService2/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.data.mongodb.uri=mongodb+srv://admin:admin@eventservice.rjyyv.mongodb.net
 spring.data.mongodb.database=eventService
 
 logging.level.org.springframework.web.servlet.mvc.method.annotation=TRACE
-spring.cloud.config.enabled=false
+#spring.cloud.config.enabled=false
