--- a/P3-EventService2/pom.xml
+++ b/P3-EventService2/pom.xml
@@ -89,11 +89,11 @@
         <artifactId>spring-cloud-starter-config</artifactId>
     </dependency>
 
-    <!-- Eureka Client Dependency 
+    <!-- Eureka Client Dependency -->
    	<dependency>
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-    </dependency> -->
+    </dependency> 
 
     <!-- Rest Assured Dependency -->
     <dependency>
