Probado Eureka, añadido de errores UserService

--- a/P3-EventService2/src/main/resources/application.properties
+++ b/P3-EventService2/src/main/resources/application.properties
@@ -3,3 +3,13 @@ spring.data.mongodb.database=eventService
 
 logging.level.org.springframework.web.servlet.mvc.method.annotation=TRACE
 #spring.cloud.config.enabled=false
+
+# ===============================
+# = CONFIG SERVER
+# ===============================
+# Los datos del puerto se encuentran en la configuracion
+spring.application.name=eventService
+
+#Datos para traer la configuracion
+spring.cloud.config.uri=http://localhost:2222
+spring.config.import=optional:configserver:
