--- a/P3-EventService2/pom.xml
+++ b/P3-EventService2/pom.xml
@@ -37,6 +37,7 @@
         <version>2.1.12</version>
     </dependency>
 
+
     <!-- Actuotor Dependency  -->
     <dependency>
         <groupId>org.springframework.boot</groupId>
@@ -64,6 +65,12 @@
         <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
 
+<!-- https://mvnrepository.com/artifact/org.mongodb/mongo-java-driver -->
+<dependency>
+    <groupId>org.mongodb</groupId>
+    <artifactId>mongo-java-driver</artifactId>
+    <version>3.12.10</version>
+</dependency>
     <!-- Spring Boot Testing Dependency -->
     <dependency>
         <groupId>org.springframework.boot</groupId>
