añadido RDS a userService

--- a/P3-UserService/src/main/resources/application.properties
+++ b/P3-UserService/src/main/resources/application.properties
@@ -8,9 +8,9 @@ logging.level.org.springframework.web.servlet.mvc.method.annotation=TRACE
 # ===============================
 # = DATA SOURCE
 # ===============================
-spring.datasource.url= jdbc:mysql://localhost:3306/userSecurity?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username= root
-spring.datasource.password= root
+spring.datasource.url=  jdbc:mysql://userticketmaster.c6xjvhfijysr.eu-west-3.rds.amazonaws.com/userService?useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.username= Administrador
+spring.datasource.password= Administrador1
 
 # ===============================
 # = JPA / HIBERNATE
