--- a/P3-TicketService2/src/main/resources/application.properties
+++ b/P3-TicketService2/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+# ===============================
+# = CONFIG SERVER
+# ===============================
 
+# Los datos del puerto se encuentran en la configuracion
+spring.application.name=ticketService
+
+#Datos para traer la configuracion
+spring.cloud.config.uri=http://localhost:2222
+
+spring.config.import=optional:configserver:
