--- a/P3-UserService/src/main/resources/application.properties
+++ b/P3-UserService/src/main/resources/application.properties
@@ -8,7 +8,8 @@ logging.level.org.springframework.web.servlet.mvc.method.annotation=TRACE
 # ===============================
 # = DATA SOURCE
 # ===============================
-spring.datasource.url=  jdbc:mysql://userticketmaster.c6xjvhfijysr.eu-west-3.rds.amazonaws.com/userService?useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.url=  jdbc:mysql://userticketmaster.c6xjvhfijysr.eu-west-3.rds.amazonaws.com/userSecurity?useUnicode=yes&characterEncoding=UTF-8
+
 spring.datasource.username= Administrador
 spring.datasource.password= Administrador1
 
