--- a/P3-PaymentService/.project
+++ b/P3-PaymentService/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>P3-paymentService</name>
+	<name>P3-PaymentService</name>
 	<comment></comment>
 	<projects>
 	</projects>
