--- a/P3-TicketService2/src/main/resources/application.properties
+++ b/P3-TicketService2/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.application.name=ticketService
 spring.cloud.config.uri=http://localhost:2222
 
 spring.config.import=optional:configserver:
+
+
+#Para tener los endpoint
+logging.level.org.springframework.web.servlet.mvc.method.annotation=TRACE
