--- a/P3-PaymentService/pom.xml
+++ b/P3-PaymentService/pom.xml
@@ -80,6 +80,10 @@
 		<!-- Spring Cloud Dependency -->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-config</artifactId>
 		</dependency>
 
